fixes spacing on nav and adds more space on group show

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,6 @@ body {
 
 .sidebar-nav h4{
   padding-left: 20px;
-  padding-top: 40px;
 }
 
 label {
